<resources>
    <string name="app_name">百宝盒</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_item1">首 页</string>
    <string name="main_item2">发 现</string>
    <string name="main_item3">活动大厅</string>
    <string name="main_item4">我 的</string>
    <string name="bangzhu">帮 助</string>
    <string name="connectfile">网络连接错误</string>
    <string name="jiechufile">解除失败！</string>
    <string name="jiechusucc">解除成功！</string>
    <string name="tianjiasucc">添加成功！</string>
    <string name="tianjiafile">添加失败！</string>
    <string name="duijiangfile">兑奖失败</string>
    <string name="tuikuanfile">兑奖失败</string>
    <string name="shoukuanfile">收款失败</string>
    <string name="tixianfile">提现申请失败</string>
    <string name="tixianed">提现申请成功</string>
    <string name="item4_1">消费记录</string>
    <string name="item4_2">我的收藏</string>
    <string name="item4_3">退出登录</string>

    <string name="goods_item1">店 铺</string>
    <string name="goods_item2">预 约</string>
    <string name="goods_tag">店员名称</string>
    <string name="goods_1">元宝不足！</string>
    <string name="goods_2">金额不足！</string>
    <string name="goods_3">换购成功，请在记录里查看兑奖密码</string>

    <string name="pubu_tag">店铺名称</string>
    <string name="help">1.声明：苹果公司未以任何形式参与抽奖活动;\n2.抽奖流程：在首页输入抽奖券号进行抽奖，用户中奖需将兑奖码交给对应商家兑奖，若抽中官方奖品，官方会主动联系用户发放奖品;\n3.在线付款：在对应商家页面支付消费金额，将付款密码交由商家验证，在商家验证后会产生随机折扣自动返还相应金额。\n</string>

    <string name="order_tag">预 约</string>
    <string name="ordered">预约成功</string>
    <string name="orderfile">预约失败</string>
    <string name="order">您将预约本商户？</string>

    <string name="login_tag">登 陆</string>
    <string name="login_user1">用 户</string>
    <string name="login_user2">商 家</string>
    <string name="login_name">姓 名</string>
    <string name="login_phone">手机号码</string>
    <string name="login_send">发送验证码</string>
    <string name="login_key">验证码</string>
    <string name="login_testing">验 证</string>
    <string name="login_msg">登陆类型绑定错误，请联系我们：0898-65916454</string>
    <string name="login_toast1">请选择您的身份</string>
    <string name="login_toast2">请输入您的姓名</string>
    <string name="login_toast3">请输入正确的手机号码</string>
    <string name="login_toast4">验证码错误</string>
    <string name="login_sends">已发送</string>
    <string name="login_toast5">登陆成功</string>
    <string name="login_toast6">登陆失败</string>g
    <string name="jianpinliebiao">奖品列表</string>

    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>

    <string name="jilu_tag">记 录</string>
    <string name="zhekou_tag">折扣记录</string>
    <string name="jilu1">兑 奖</string>
    <string name="jilu2">已兑奖</string>
    <string name="jilu3">未兑奖</string>
    <string name="shoucang_tag">我的收藏</string>

    <string name="tixian">申请提现</string>
    <string name="tixian_item1">银 行</string>
    <string name="tixian_item2">姓 名</string>
    <string name="tixian_item3">卡 号</string>
    <string name="tixian_item4">金 额</string>

    <string name="menu_item1">上传照片</string>
    <string name="menu_item2">修改资料</string>
    <string name="menu_item3">删除奖品</string>

    <string name="loding">正在加载。。。</string>
    <string name="okay">确 定</string>
    <string name="shengcheng">生 成</string>
    <string name="tips">提 示</string>
    <string name="store">店 铺</string>
    <string name="yinke">引客：</string>
    <string name="tongyi">同意</string>
    <string name="id">店铺ID:</string>
    <string name="tip1">请输入奖券数量：</string>
    <string name="tip2">请输入充值金额：</string>
    <string name="tip3">请输入付款金额：</string>
    <string name="tip6">请输入想联盟的店铺ID：</string>
    <string name="tip7">注意：￥代表现金，$代表元宝！</string>
    <string name="tip8">元宝不足时将自动扣除现金</string>
    <string name="tip9">输入店员工号</string>
    <string name="huangou">换 购</string>

    <string name="tip4">请输入已发送到手机的支付密码：</string>
    <string name="tip5">付款成功!\n请将付款记录里的付款密码提供给商家</string>
    <string name="msg2">钱包金额不足，是否充值</string>
    <string name="msg4">申请已发送</string>
    <string name="msg5">申请发送失败</string>
    <string name="msg3">元购买？</string>
    <string name="login">正在登陆</string>
    <string name="logout">您将退出当前账号</string>
    <string name="connect">正在加载信息</string>
    <string name="Okay">确 定</string>
    <string name="cancel">取 消</string>
    <string name="haoping">好 评</string>
    <string name="chaping">差 评</string>
    <string name="updata">正在上传信息</string>
    <string name="uped">上传成功</string>
    <string name="upefiled">上传失败</string>
    <string name="delect">您将删除本信息？</string>
    <string name="jiechu">您将解除改店铺？</string>
    <string name="isshoukuan">是否确认收款？</string>
    <string name="delected">删除成功</string>
    <string name="delectfaile">删除失败</string>

    <string name="changed">修改成功</string>
    <string name="max">所有商品几率总和不能大于100</string>
    <string name="changfile">修改失败</string>
    <string name="nomore">已没有更多图片</string>
    <string name="Exit">再按一次退出程序</string>
    <string name="nologin">您还没有登录</string>
    <string name="yeji">业 绩</string>
    <string name="jilu">记 录</string>
    <string name="nonull">请先完善您的提现信息！</string>
    <string name="shoukuan_item1">金额</string>
    <string name="shoukuan_item2">折扣</string>
    <string name="shoukuan_item3">实收</string>
    <string name="qianbao">钱 包</string>
    <string name="qianbao_item1">付款记录</string>
    <string name="qianbao_item2">收款纪录</string>
    <string name="qianbao_item3">申请提现</string>
    <string name="duijiang">兑 奖</string>
    <string name="yanzheng">验 证</string>
    <string name="duijiang1">是否确认兑奖？</string>
    <string name="tuikuan">是否确认退款？</string>
    <string name="yeji1">接 受</string>
    <string name="yeji2">取 消</string>
    <string name="yeji3">已取消</string>
    <string name="yeji4">您将接受此预约？</string>
    <string name="yeji5">您将取消此预约？</string>
    <string name="set">设 置</string>
    <string name="lianmeng">商 盟</string>
    <string name="search">搜 索</string>
    <string name="sousuo_1">本 店：</string>
    <string name="sousuo_2">外 店：</string>
    <string name="lianmeng_1">主 动：</string>
    <string name="lianmeng_2">被 动：</string>
    <string name="fukuan">付 款</string>
    <string name="fukuan_1">付款密码:</string>
    <string name="fukuan_2">抽 奖 券 :</string>
    <string name="shangjia">商 家</string>
    <string name="search_text">请输入顾客的兑奖密码</string>
    <string name="search_texts">请输入收款密码</string>
    <string name="search_text2">请输入奖券编号</string>
    <string name="search_text3">请输入商家名称</string>
    <string name="call">拨打电话：</string>
    <string name="duijiangtip">提示：此功能为商家功能！</string>
    <string name="nosave">您的修改还没有保存！</string>
    <string name="err">随机折扣必须于0至100之间！</string>
    <string name="fu">付给：</string>
    <string name="nei">内</string>
    <string name="wai">外</string>

    <string name="yuyue1">您有一条新预约！</string>
    <string name="yuyue2">您有新的订单</string>
    <string name="yuyue3">轻敲查看详情</string>
    <string name="fukuan_zhuangtai1">退 款</string>
    <string name="fukuan_zhuangtai2">评 价</string>
    <string name="fukuan_zhuangtai3">已 评</string>
    <string name="fukuan_zhuangtai4">已退款</string>

    <string name="set_item1">几率</string>
    <string name="set_item2">剩余</string>
    <string name="set_item3">已中</string>

    <string name="pay_item1">支付成功</string>
    <string name="pay_item2">支付结果确认中</string>
    <string name="pay_item3">支付失败</string>

    <string name="duijiang_tag">兑 奖</string>
    <string name="duijiang_item1">奖 券</string>
    <string name="lianmeng_item1">列 表</string>
    <string name="lianmeng_item2">管 理</string>

    <string name="chongzhi">充值</string>
    <string name="shoukuan">收 款</string>
    <string name="shoudao">收 到：</string>
    <string name="fugei">付 给：</string>
    <string name="shoukuans">已收款</string>
    <string name="tuikuans">已退款</string>
    <string name="set_1">随机返现:</string>
    <string name="set_0">二次消费折扣:</string>
    <string name="set_2">折起</string>
    <string name="set_3">折</string>
    <string name="set_4">% — </string>
    <string name="set_5">%</string>

    <string name="phone_tag">店员设置</string>
    <string name="phone_item1">输入店员手机号：</string>
    <string name="phone_item2">注：添加的手机号可使用您的兑奖功能</string>
    <string name="phone_item3">店员手机</string>
    <string name="phone_item4">店员工号</string>

    <string name="choujiang">抽 奖</string>
    <string name="qianbao_1">余额：</string>
    <string name="qianbao_2">元宝：</string>
    <string name="bukehuangou">不可换购</string>

    <string name="zhekou_1">用 户</string>
    <string name="zhekou_2">折 扣</string>
    <string name="zhekou_3">时 间</string>
    <string name="sousuo_zhu">注：外店中带"内"标记的奖品不参与抽奖</string>
    <string name="duijiang_1">客人来自：</string>
    <string name="duijiang_2">工号：</string>
    <string name="fukuan_item1">金　　额：</string>
    <string name="fukuan_item2">付款密码：</string>
    <string name="fukuan_item3">商　　家：</string>
    <string name="fukuan_item4">时　　间：</string>
    <string name="fukuanresult_tag">付款成功</string>
    <string name="choujiang_no">真可惜，离大奖就差一点！</string>
    <string name="jiangquan_tag">奖 券</string>
    <string name="jiangquan_item1">剩 余</string>
    <string name="jiangquan_bucunzai">奖券编号不存在或已使用过！</string>
    <string name="jiangquan_bucunzais">奖券不存在或商家无奖品！</string>
    <string name="jiangquan_1">兑奖密码不存在！</string>
    <string name="jiangquan_2">收款密码不存在！</string>

    <string name="zhanshi">展 示</string>
    <string name="fuzhi">复 制</string>
    <string name="fuzhied">已复制到剪切板</string>
    <string name="fuzhiyincang">已复制并隐藏该奖券</string>
    <string name="yincang">隐 藏</string>
    <string name="back">返回</string>

    <string name="shuliang">剩余</string>
    <string name="yizhong">已中</string>
    <string name="xiangqing">查看详情></string>

    <string name="yonghu">商 家：</string>
    <string name="yonghu2">中奖者：</string>
    <string name="bianhao">奖券编号：</string>
    <string name="mima">兑奖密码：</string>

    <string name="jiangquan1">共</string>
    <string name="jiangquan2">条</string>

    <string name="help_item1">公 司</string>
    <string name="help_item2">电 话</string>
    <string name="help_item3">Ｑ Ｑ</string>
    <string name="help_item4">邮 箱</string>
    <string name="help_item5">海南纽依兰网络科技有限公司</string>
    <string name="help_item6">0898-65916454</string>
    <string name="help_item7">316344445</string>
    <string name="help_item8">316344445@qq.com</string>
</resources>
