<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/toubu"
        android:gravity="center"
        android:text="@string/login_tag"
        android:textColor="@color/white"
        android:textSize="@dimen/tag_textsize" />

    <TextView
        android:id="@+id/login_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="@dimen/tag_textsize" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/login_lin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_tag"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/login_parents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/textview_edge"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/login_user1" />

            <TextView
                android:id="@+id/login_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/textview_edge"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/login_user2" />


        </LinearLayout>


        <EditText
            android:id="@+id/login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_marginTop"
            android:background="@drawable/textview_circle2s"
            android:ems="11"
            android:hint="@string/login_phone"
            android:inputType="phone"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:textCursorDrawable="@color/chengse" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/login_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginTop="@dimen/login_marginTop"
                android:layout_weight="0.7"
                android:background="@drawable/textview_circle2s"
                android:ems="10"
                android:hint="@string/login_key"
                android:inputType="number"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:textCursorDrawable="@color/chengse" />

            <Button
                android:id="@+id/login_send"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/login_marginTop"
                android:layout_weight="1"
                android:background="@drawable/textview_circle_chengse"
                android:text="@string/login_send"
                android:textColor="@color/white" />

        </LinearLayout>


        <Button
            android:id="@+id/login_testing"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/login_marginTop"
            android:background="@drawable/textview_circle_chengse"
            android:text="@string/login_testing"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
