<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/toubu"
        android:gravity="center"
        android:text="@string/fukuanresult_tag"
        android:textColor="@color/white2"
        android:textSize="18sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:stretchColumns="1">

        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:text="@string/fukuan_item1"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fukuan_item1"
                android:textColor="@color/chengse"
                android:textSize="18sp" />
        </TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray" />

        <TableRow>

            <TextView
                android:minWidth="100dp"
                android:text="@string/fukuan_item2"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fukuan_item2"
                android:textColor="@color/chengse"
                android:textSize="18sp" />
        </TableRow>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray" />

        <TableRow>

            <TextView
                android:text="@string/fukuan_item3"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fukuan_item3"
                android:textColor="@color/chengse"
                android:textSize="18sp" />
        </TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray" />

        <TableRow>

            <TextView
                android:text="@string/fukuan_item4"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fukuan_item4"
                android:textColor="@color/chengse"
                android:textSize="18sp" />
        </TableRow>


    </TableLayout>
</LinearLayout>