<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/toubu" />

    <EditText
        android:id="@+id/set_tag"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@null"
        android:enabled="false"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/goods_tag"
        android:textColor="@color/white"
        android:textCursorDrawable="@color/chengse"
        android:textSize="@dimen/tag_textsize" />

    <ImageView
        android:id="@+id/set_shoucang"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/shoucang" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/set_tag"
        android:background="@color/gray" />



    <android.support.v7.widget.RecyclerView
        android:id="@+id/set_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/set_item2"
        android:layout_below="@+id/set_tag">

    </android.support.v7.widget.RecyclerView>


    <TextView
        android:id="@+id/set_item1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:background="@drawable/textview_edge_circle"
        android:gravity="center"
        android:text="@string/goods_item1"
        android:visibility="gone" />

    <TextView
        android:id="@+id/set_item2"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:background="@drawable/textview_circle_chengse"
        android:gravity="center"
        android:text="@string/Okay"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/set_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/set_shoucang"
        android:background="@drawable/textview_edge"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/menu_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:visibility="gone"
            android:text="@string/menu_item1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/menu_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/menu_item2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/menu_item3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:visibility="gone"
            android:text="@string/menu_item3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />
    </LinearLayout>

</RelativeLayout>